<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_interfaz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.usuario.AgregarCitasActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnHomeContainer"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        app:cardBackgroundColor="@color/rectanguloLogo"
        app:cardCornerRadius="27.5dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/colorIntermedio"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/home_morado"
            android:contentDescription="Volver al inicio"
            android:padding="12dp"
            android:scaleType="centerInside" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTituloCita"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/rectanguloLogo"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:strokeColor="@color/colorIntermedio"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toTopOf="@id/btnHomeContainer"
        app:layout_constraintBottom_toBottomOf="@id/btnHomeContainer"
        app:layout_constraintStart_toEndOf="@id/btnHomeContainer"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Registro de Citas"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/btnHomeContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@drawable/rectangulosesion">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Información del Registro"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginBottom="15dp"
                        android:textSize="15sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutMascota"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:endIconTint="@color/moradoSubtitulo"
                        app:errorIconDrawable="@null">
                        <AutoCompleteTextView
                            android:id="@+id/spinnerMascota"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Selecciona la mascota"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutRuac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtRuac"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="RUAC de la mascota"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutServicio"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null"
                        app:endIconTint="@color/moradoSubtitulo"
                        app:materialThemeOverlay="@style/ThemeOverlay.App.ExposedDropdownMenu">
                        <AutoCompleteTextView
                            android:id="@+id/txtServicio"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Servicio"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@android:color/black"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutOtroServicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null"
                        android:layout_marginTop="-10dp">
                        <EditText
                            android:id="@+id/txtOtroServicio"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Escribe el servicio específico"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black"
                            android:inputType="textCapSentences" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutFechaHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtFechaHora"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Fecha y hora de la cita"
                            android:textColorHint="@color/hintText"
                            android:focusable="false"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
                            android:textColor="@android:color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutNotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@null">
                        <EditText
                            android:id="@+id/txtNotas"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:hint="Notas adicionales"
                            android:textColorHint="@color/hintText"
                            android:gravity="top"
                            android:background="@drawable/campos_circulares"
                            android:padding="15dp"
                            android:textColor="@android:color/black"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingHorizontal="25dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnGuardarCambiosContainer"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:id="@+id/btnGuardarCambios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="12dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/aceptar_morado"
                            android:layout_marginEnd="8dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Guardar"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>